documentacion/obtenida/ARINC 429/driver and software/LX-AFDX-1/API/AX1W32NET.VB

    Public Declare Function AX1_Mask Lib "AX1W32.DLL" Alias "_AX1_Mask@8" (ByVal dataval As Integer, ByVal cntval As Integer) As Integer
    Public Declare Sub AX1_MaxMant Lib "AX1W32.DLL" Alias "_AX1_MaxMant@8" (ByRef mant As Integer, ByRef exp As Integer)
    Public Declare Sub AX1_MEMWINFillW Lib "AX1W32.DLL" Alias "_AX1_MEMWINFillW@20" (ByVal value As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Function AX1_MEMWINRdB Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdB@12" (ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Byte
    Public Declare Function AX1_MEMWINRdL Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdL@12" (ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_MEMWINRdsL Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdsL@20" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_MEMWINRdsW Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdsW@20" (ByRef valueptr As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Function AX1_MEMWINRdW Lib "AX1W32.DLL" Alias "_AX1_MEMWINRdW@12" (ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer) As Short
    Public Declare Sub AX1_MEMWINWrB Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrB@16" (ByVal value As Byte, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_MEMWINWrL Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrL@16" (ByVal value As Integer, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_MEMWINWrsL Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrsL@20" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_MEMWINWrsW Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrsW@20" (ByRef valueptr As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_MEMWINWrW Lib "AX1W32.DLL" Alias "_AX1_MEMWINWrW@16" (ByVal value As Short, ByVal addrval As Integer, ByVal bustype As Integer, ByVal handleval As Integer)
    Public Declare Function AX1_Mod Lib "AX1W32.DLL" Alias "_AX1_Mod@8" (ByVal moda As Integer, ByVal modb As Integer) As Integer
    Public Declare Function AX1_Mul Lib "AX1W32.DLL" Alias "_AX1_Mul@8" (ByVal mula As Integer, ByVal mulb As Integer) As Integer
    Public Declare Function AX1_NetGetConfig Lib "AX1W32.DLL" Alias "_AX1_NetGetConfig@12" (ByRef pconfigval As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_NetSetConfig Lib "AX1W32.DLL" Alias "_AX1_NetSetConfig@12" (ByVal configval As Integer, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_NormalMant Lib "AX1W32.DLL" Alias "_AX1_NormalMant@8" (ByRef mant As Integer, ByRef exp As Integer)
    Public Declare Function AX1_ParamGetFrameFreq Lib "AX1W32.DLL" Alias "_AX1_ParamGetFrameFreq@16" (ByRef pconfigval As Integer, ByRef ppercent As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortConfigEx Lib "AX1W32.DLL" Alias "_AX1_PortConfigEx@32" (ByVal configval As Integer, ByVal dstid As Short, ByVal srcid As Short, ByVal depth As Short, ByVal reprate As Short, ByRef portptr As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortGetAny Lib "AX1W32.DLL" Alias "_AX1_PortGetAny@8" (ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortGetConfig Lib "AX1W32.DLL" Alias "_AX1_PortGetConfig@12" (ByRef pconfigval As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortIsHostRcv Lib "AX1W32.DLL" Alias "_AX1_PortIsHostRcv@8" (ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_PortSetConfig Lib "AX1W32.DLL" Alias "_AX1_PortSetConfig@12" (ByVal configval As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_RAMFill Lib "AX1W32.DLL" Alias "_AX1_RAMFill@16" (ByVal value As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Integer)
    Public Declare Function AX1_RAMRdB Lib "AX1W32.DLL" Alias "_AX1_RAMRdB@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Byte
    Public Declare Function AX1_RAMRdL Lib "AX1W32.DLL" Alias "_AX1_RAMRdL@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Sub AX1_RAMRdsL Lib "AX1W32.DLL" Alias "_AX1_RAMRdsL@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_RAMRdsW Lib "AX1W32.DLL" Alias "_AX1_RAMRdsW@16" (ByRef valueptr As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Integer)
    Public Declare Function AX1_RAMRdW Lib "AX1W32.DLL" Alias "_AX1_RAMRdW@8" (ByVal addrval As Integer, ByVal handleval As Integer) As Short
    Public Declare Sub AX1_RAMWipe Lib "AX1W32.DLL" Alias "_AX1_RAMWipe@4" (ByVal handleval As Integer)
    Public Declare Sub AX1_RAMWipeEx Lib "AX1W32.DLL" Alias "_AX1_RAMWipeEx@8" (ByVal value As Short, ByVal handleval As Integer)
    Public Declare Sub AX1_RAMWrB Lib "AX1W32.DLL" Alias "_AX1_RAMWrB@12" (ByVal value As Byte, ByVal addrval As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_RAMWrL Lib "AX1W32.DLL" Alias "_AX1_RAMWrL@12" (ByVal value As Integer, ByVal addrval As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_RAMWrsL Lib "AX1W32.DLL" Alias "_AX1_RAMWrsL@16" (ByRef valueptr As Integer, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_RAMWrsW Lib "AX1W32.DLL" Alias "_AX1_RAMWrsW@16" (ByRef valueptr As Short, ByVal addrval As Integer, ByVal countval As Integer, ByVal handleval As Integer)
    Public Declare Sub AX1_RAMWrW Lib "AX1W32.DLL" Alias "_AX1_RAMWrW@12" (ByVal value As Short, ByVal addrval As Integer, ByVal handleval As Integer)
    Public Declare Function AX1_RcvHostGetEnable Lib "AX1W32.DLL" Alias "_AX1_RcvHostGetEnable@8" (ByRef penableval As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RevArray32 Lib "AX1W32.DLL" Alias "_AX1_RevArray32@8" (ByRef data As Byte, ByVal length As Integer) As Integer
    Public Declare Function AX1_RevWord64 Lib "AX1W32.DLL" Alias "_AX1_RevWord64@8" (ByRef data As Byte, ByVal offset As Integer) As Integer
    Public Declare Function AX1_RPC_CardCheck Lib "AX1W32.DLL" Alias "_AX1_RPC_CardCheck@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_CardClean Lib "AX1W32.DLL" Alias "_AX1_RPC_CardClean@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_CardDeviceInfoRd Lib "AX1W32.DLL" Alias "_AX1_RPC_CardDeviceInfoRd@12" (ByVal index As Integer, ByRef valueptr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_CardIsRunning Lib "AX1W32.DLL" Alias "_AX1_RPC_CardIsRunning@8" (ByRef bRunning As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_CardStart Lib "AX1W32.DLL" Alias "_AX1_RPC_CardStart@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_CardStop Lib "AX1W32.DLL" Alias "_AX1_RPC_CardStop@4" (ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DcrRdL Lib "AX1W32.DLL" Alias "_AX1_RPC_DcrRdL@12" (ByRef data As Integer, ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DcrWrL Lib "AX1W32.DLL" Alias "_AX1_RPC_DcrWrL@12" (ByVal data As Integer, ByVal addr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DefaultPortConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_DefaultPortConfig@16" (ByVal ctrlflags As Integer, ByVal netid As Short, ByVal depth As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DefaultPortGetHandle Lib "AX1W32.DLL" Alias "_AX1_RPC_DefaultPortGetHandle@12" (ByVal netid As Short, ByRef hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DetectPort Lib "AX1W32.DLL" Alias "_AX1_RPC_DetectPort@12" (ByRef portnum As Short, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DetectVL Lib "AX1W32.DLL" Alias "_AX1_RPC_DetectVL@12" (ByRef vlid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DetectVLIgnore Lib "AX1W32.DLL" Alias "_AX1_RPC_DetectVLIgnore@12" (ByVal vlid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_DmaParam Lib "AX1W32.DLL" Alias "_AX1_RPC_DmaParam@16" (ByVal addrh As Integer, ByVal addrl As Integer, ByVal sizeattr As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrCtrlConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrCtrlConfig@16" (ByVal configval As Integer, ByVal trigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrCtrlGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrCtrlGetConfig@16" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrNetEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrNetEnable@16" (ByVal netid As Short, ByVal configval As Integer, ByVal trigid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrNetGetEnable Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrNetGetEnable@16" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByVal netid As Short, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrPktConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrPktConfig@32" (ByVal configval As Integer, ByVal blendflags As Integer, ByVal trigid As Short, ByRef packet As Byte, ByVal pktlen As Short, ByVal totallen As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrPktGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrPktGetConfig@16" (ByRef pconfigval As Integer, ByRef pblendflags As Integer, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrPktGetConfigEx Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrPktGetConfigEx@32" (ByRef pconfigval As Integer, ByRef pblendflags As Integer, ByRef ptrigid As Short, ByRef packet As Byte, ByVal pktlen As Short, ByRef ptotallen As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrRSNConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrRSNConfig@20" (ByVal configval As Integer, ByVal trigid As Short, ByVal modifier As Short, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrRSNGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrRSNGetConfig@20" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByRef pmodifier As Integer, ByVal hvl As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrXmtConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrXmtConfig@16" (ByVal configval As Integer, ByVal trigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
    Public Declare Function AX1_RPC_ErrXmtGetConfig Lib "AX1W32.DLL" Alias "_AX1_RPC_ErrXmtGetConfig@16" (ByRef pconfigval As Integer, ByRef ptrigid As Short, ByVal hport As Integer, ByVal handleval As Integer) As Integer
